--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>toutiao-api1</name>
-    <description>Demo project for Spring Boot</description>
+    <name>toutiao-api</name>
+    <description>Demo project for Spring Boot.</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
