--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ########################################################
 ###datasource
 ########################################################
-spring.datasource.url=jdbc:mysql://116.196.78.38/sys
+spring.datasource.url=jdbc:mysql://116.196.78.38/toutiao?useUnicode\=true&characterEncoding\=UTF-8&InnoDB\=true
 spring.datasource.username=root
 spring.datasource.password=Xk997653765
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -9,9 +9,9 @@ spring.datasource.max-active=20
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
 spring.datasource.initial-size=10
-##mybatisÉ¨Ãè°ü
+##mybatisÉ¨ï¿½ï¿½ï¿½
 mybatis.config-locations=classpath:mybatis/mybatisConfig.xml
 mybatis.mapper-locations=classpath:mybatis/sqlmaps/*.xml
 server.port=8081
-##pagehelper·ÖÒ³²ÎÊýºÏÀí»¯½ûÓÃ
+##pagehelperï¿½ï¿½Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 pagehelper.reasonable=false
